--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,12 +9,12 @@ body header .navBar .navBar_searchBar input::placeholder, body header .navBar .n
   font-size: 14px;
   font-weight: 400; }
 
-body header .navBar .navBar_group .navBar_group_item a, body header .content .content_details, body main .delivery .delivery_group .item .item_info .details {
+body header .navBar .navBar_group .navBar_group_item a, body header .content .content_details, body main .delivery .delivery_group .item .item_info .details, body main .about .about_content .desc {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400; }
 
-body main .popular .popular_card_group .popular_card_item .content .content_body .info span, body main .popular .popular_card_group .popular_card_item .content .content_body .frame .frame_nature div, body main .delivery .delivery_group .item .item_info .title {
+body main .popular .popular_card_group .popular_card_item .content .content_body .info span, body main .popular .popular_card_group .popular_card_item .content .content_body .frame .frame_nature div, body main .delivery .delivery_group .item .item_info .title, body main .about .about_content .details {
   font-family: "Poppins", sans-serif;
   font-size: 24px;
   font-weight: 600; }
@@ -24,7 +24,7 @@ body header .content .content_title {
   font-size: 48px;
   font-weight: 600; }
 
-body header .content .content_buy .order {
+body header .content .content_buy .order, body main .about .about_content .btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,7 +39,7 @@ body header .content .content_buy .order .order_iconCart, body main .popular .po
   justify-content: center;
   align-items: center; }
 
-body main .popular .popular_title::before, body main .delivery .delivery_title::before {
+body main .popular .popular_title::before, body main .delivery .delivery_title::before, body main .about .about_content .title::before {
   position: absolute;
   right: 0px;
   bottom: 4px;
@@ -48,7 +48,7 @@ body main .popular .popular_title::before, body main .delivery .delivery_title::
   border-radius: 12px;
   background: #ff902b; }
 
-body main .popular .popular_title, body main .delivery .delivery_title {
+body main .popular .popular_title, body main .delivery .delivery_title, body main .about .about_content .title {
   font-family: "Poppins", sans-serif;
   font-size: 32px;
   font-weight: 600;
@@ -56,6 +56,7 @@ body main .popular .popular_title, body main .delivery .delivery_title {
   color: #000; }
 
 body {
+  font-family: "Poppins", sans-serif;
   position: relative;
   width: 1440px;
   max-width: 100%;
@@ -349,5 +350,64 @@ body {
             margin-top: 8px;
             letter-spacing: 0.72px;
             color: #000; }
+  body main .about {
+    position: relative;
+    margin-top: 120px;
+    height: 572px; }
+    body main .about .about_bgImg {
+      width: 100%;
+      height: 484px;
+      position: absolute;
+      top: 88px;
+      left: 0px;
+      background: url(../images/bg-image-about.png) center/cover no-repeat; }
+    body main .about .about_Img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0px;
+      left: 235px;
+      width: 370px;
+      height: 509px;
+      border-radius: 12px;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.4) 100%); }
+      body main .about .about_Img .image {
+        width: 358px;
+        height: 496px;
+        background: url(../images/about_img.png) center/cover no-repeat;
+        border-radius: 12px; }
+    body main .about .about_content {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      width: 478px;
+      height: 316px;
+      top: 172px;
+      right: 188px; }
+      body main .about .about_content .title {
+        position: absolute;
+        top: 0;
+        left: 0; }
+      body main .about .about_content .title::before {
+        content: "";
+        width: 43px; }
+      body main .about .about_content .details {
+        margin-top: 78px;
+        width: 348px;
+        color: #000;
+        letter-spacing: 0.96px; }
+      body main .about .about_content .desc {
+        letter-spacing: 0.72px;
+        color: #7e7d7a;
+        margin-top: 16px; }
+      body main .about .about_content .btn {
+        align-self: flex-start;
+        padding: 10px 24px;
+        margin-top: 32px;
+        font-size: 12px;
+        font-weight: 700;
+        color: #f4ae26;
+        cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
