--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -86,6 +86,7 @@ $fontFamily: "Poppins", sans-serif;
 
 // Body
 body {
+    font-family: $fontFamily;
     position: relative;
     width: 1440px;
     max-width: 100%;
@@ -540,6 +541,97 @@ body {
                             color: #000;
                         }
                     }
+                }
+            }
+        }
+
+        // About us
+        .about {
+            position: relative;
+            margin-top: 120px;
+            height: 572px;
+
+            .about_bgImg {
+                width: 100%;
+                height: 484px;
+                position: absolute;
+                top: 88px;
+                left: 0px;
+                background: url(../images/bg-image-about.png) center / cover
+                    no-repeat;
+            }
+
+            .about_Img {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0px;
+                left: 235px;
+                width: 370px;
+                height: 509px;
+                border-radius: 12px;
+                background: linear-gradient(
+                    180deg,
+                    rgba(255, 255, 255, 0.7) 0%,
+                    rgba(255, 255, 255, 0.4) 100%
+                );
+
+                .image {
+                    width: 358px;
+                    height: 496px;
+                    background: url(../images/about_img.png) center / cover
+                        no-repeat;
+                    border-radius: 12px;
+                }
+            }
+
+            .about_content {
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                width: 478px;
+                height: 316px;
+                top: 172px;
+                right: 188px;
+
+                .title {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    @extend %titleProduct;
+                }
+
+                .title::before {
+                    content: "";
+                    @extend %underLine;
+                    width: 43px;
+                }
+
+                .details {
+                    @extend %textL;
+                    margin-top: 78px;
+                    width: 348px;
+                    color: #000;
+                    letter-spacing: 0.96px;
+                }
+
+                .desc {
+                    @extend %textM;
+                    letter-spacing: 0.72px;
+                    color: $lightColor;
+                    margin-top: 16px;
+                }
+
+                .btn {
+                    @extend %btn;
+                    align-self: flex-start;
+                    padding: 10px 24px;
+                    margin-top: 32px;
+                    font-size: 12px;
+                    font-weight: 700;
+                    color: #f4ae26;
+                    cursor: pointer;
                 }
             }
         }
